# quarks

./: README.md  docker-compose.yml
.github/workflows/: integration.yml
backend/: .gitignore  Dockerfile  Dockerfile.test  README.md  pyproject.toml  scripts.py
backend/backend/: __init__.py
backend/backend/blueprints/classifier/: __init__.py  service.py
backend/backend/models/: sklearn-logistc-regressor-model.joblib  vectorizer.pickle
backend/tests/: conftest.py  insomnia-export.json  test_backend.py
backend/tests/test_blueprints/: test_classifier.py
frontend/: Dockerfile.test  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/assets/: filmlist.csv
frontend/src/components/: MovieReviewBox.tsx  MovieReviewFeedback.tsx  MovieReviewFormBox.tsx  MovieReviewImage.tsx  MovieReviewtitle.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/store/: Context.tsx  reducer.ts
research/: .gitignore  Dockerfile  browse-imdb-movies.ipynb  process-and-train.ipynb  pyproject.toml  readme.md  requirements.txt  scripts.py
