[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.scripts]
start = "scripts:start"
test = "scripts:test"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
gunicorn = "^20.0.4"
joblib = "^1.0.1"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
