[tool.poetry]
name = "research"
version = "0.1.0"
description = "A text sentiment analysis research to support movie review application"
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "3.5"
seaborn = "0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
